<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_debug_switch"
        android:summary="@string/pref_description_debug"
        android:title="@string/pref_title_debug" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_vibrate_switch"
        android:summary="@string/pref_description_vibrate"
        android:title="@string/pref_title_vibrate" />

    <ListPreference
        android:defaultValue="50"
        android:entries="@array/pref_title_delay"
        android:entryValues="@array/pref_delay_list_values"
        android:key="pref_delay_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_delay" />


</PreferenceScreen>
